--- a/volagui.config
+++ b/volagui.config
@@ -11,10 +11,8 @@ getsids:Print the SIDs owning each process:*
 cmdscan:Extract command history by scanning for _COMMAND_HISTORY:M
 consoles:Extract command history by scanning for _CONSOLE_INFORMATION:*
 
-####Process Memory
-memmap:Print the memory map:p
-memdump:Dump the addressable memory for a process. Warning: Can take extremely long time to execute! Supply output DIR with -D option.:pD
-evtlogs:Parse XP and 2003 event logs from memory. The save-evt option, requires no additional user input when selected.:De
-iehistory:Extract and parse Internet Explorer history and URL cache:*
+####Process Memory####
 
-
+####Beta Test####
+####Charlie Test####
+####Alpha Test####
