--- a/volagui.config
+++ b/volagui.config
@@ -12,7 +12,41 @@ cmdscan:Extract command history by scanning for _COMMAND_HISTORY:M
 consoles:Extract command history by scanning for _CONSOLE_INFORMATION:*
 
 ####Process Memory####
+memmap:Print the memory map:p
+memdump:Dump the addressable memory for a process. Warning: Can take extremely long time to execute! Supply output DIR with -D option.:pD
+evtlogs:Parse XP and 2003 event logs from memory. The save-evt option, requires no additional user input when selected.:De
+iehistory:Extract and parse Internet Explorer history and URL cache:*
 
-####Beta Test####
-####Charlie Test####
-####Alpha Test####
+####Kernel Memory####
+modules:Print list of loaded modules. Use -P switch to show physical addresses instead of virtual.:P
+modscan:Scan Physical memory for _LDR_DATA_TABLE_ENTRY objects:*
+moddump:Extract a kernel driver to disk. Provide either a regex for driver name or the base address of the driver.:DXB
+driverscan:Scan physical memory for _DRIVER_OBJECT objects:*
+filescan:Scan physical memory for _FILE_OBJECT objects:*
+mutantscan:Scan physical memory for _KMUTANT objects. Use -s option to only display named mutants:s
+
+####GUI Memory####
+sessions:List details on _MM_SESSION_SPACE (user logon sessions):*
+clipboard:Extract the contents of the windows clipboard. -v option will display additional information.:v
+eventhooks:Print details on windows event hooks:*
+windows:Print Desktop Windows (verbose details):*
+
+####Networking####
+connections:Print open connections (XP and 2003 only). -P option displays physical offset values.:P
+connscan:Scan physical memory for _TCPT_OBJECT objects (XP and 2003 only):*
+sockets:Print open sockets(XP and 2003 only). -P option displays physical offset values.:P
+
+####Registry####
+hivescan:Scan physical memory for _CMHIVE objects:*
+hivelist:Print list of registry hives:*
+printkey:Print a registry key, and its subkeys and values. If you want to search a specific registry hive, use the -o option and supply the virtual address to the hive. Surround desired key in quotes for example -K "Software\Microsoft":Ko
+hashdump:Dumps passwords hashes (LM/NTLM) from memory (x86 only). Run hivelist command to collect virtual address of SAM and System registry hive.:ys
+lsadump:Dump (decrypted) LSA secrets from the registry (XP and 2003 x86 only). Run hivelist command to collect virtual address of Security and system registry hive:ys
+getservicesids:Calculate SIDs for windows services in the registry:*
+
+####Malware####
+malfind:Find hidden and injected code. Use the process ID option to specify the process ID the command should be run against. Specify a path with the -D option to dump the extracted memory segments.:Dp
+svcscan:Scan for Windows services. Use the verbose option to report which DLL is hosting the service.:v
+ldrmodules:Detect unlinked DLLs. Use the verbose option to see full paths:v
+apihooks:Scan for calls to imported functions. Use the -p option to specify a process ID (-p 1853):p
+psxview:Find hidden processes with various process listings:*
